k8s-files/daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: api-daemon
spec:
  selector:
    matchLabels:
      app: ssd-monitor
  template:
    metadata:
      labels:
        app: ssd-monitor
    spec:
      nodeSelector:
        disk: ssd
      containers:
        - name: main
          image: muldos/dgs-skeleton:1.2.2
