k8s-files/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api

spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      name: api
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: muldos/dgs-skeleton:1.5.0
          volumeMounts:
            - name: jsondb
              mountPath: /var/db_data
          livenessProbe:
            httpGet:
              path: /health/status
              port: 8080
            initialDelaySeconds: 10
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
      volumes:
        - name: jsondb
          persistentVolumeClaim:
            claimName: apijsondb-pvc
