k8s-files/dgs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-manual
spec:
  containers:
  - image: muldos/dgs-skeleton:1.2.2
    name: api
    livenessProbe:
      httpGet:
        path: /health/status
        port: 8080
      initialDelaySeconds: 10
    ports:
    - containerPort: 8080
      protocol: TCP
