k8s-files/dnsutil-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
spec:
  containers:
    - image: tutum/dnsutils
      name: dnsutils
      command: ["sleep"]
      args: ["infinity"]
