k8s-files/api-service-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-endpoint
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: api
