k8s-files/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-endpoint
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: api
