k8s-files/api-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-headless
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: http
  selector:
    app: api
