k8s-files/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-endpoint
spec:
  type: ExternalName
  externalName: someapi.somecompany.com
  ports:
    - port: 80
