k8s-files/statefull-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateapp
spec:
  clusterIP: None
  selector:
    app: stateapp
  ports:
    - name: http
      port: 80
