k8s-files/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: api.davidrobin.net
      http:
        paths:
          - path: /
            backend:
              serviceName: api-nodeport
              servicePort: 80
